# tpkb

./: .gitignore  CMakeLists.txt  README.md  build-mingw.bat  build.bat
.github/workflows/: build.yml
res/: resource.h  tpkb.manifest  tpkb.rc  w10wheel.rc
src/: config.c  config.h  cursor.c  cursor.h  dialog.c  dialog.h  dispatch.c  dispatch.h  event.c  event.h  hook.c  hook.h  ipc.c  ipc.h  kevent.c  kevent.h  locale.c  locale.h  main.c  rawinput.c  rawinput.h  scroll.c  scroll.h  settings.c  settings.h  tray.c  tray.h  types.h  util.c  util.h  waiter.c  waiter.h
